<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/viewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium_dimen"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_dimen"
            android:hint="@string/hint_enter_login"
            android:inputType="text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_dimen"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_dimen"
            android:text="@string/text_enter" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bRegistration"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:textSize="@dimen/standart_text"
            android:layout_width="wrap_content"
            android:text="@string/registration_text"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bForgotPassword"
            style="@style/Widget.Material3.Button.TextButton"
            android:textSize="@dimen/standart_text"
            android:text="@string/forgot_my_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>


</FrameLayout>